# e_commerce

./: .gitignore  .gitmodules  BUILD_GUIDE.md  INTER_SERVICE.md  README.md  USER_GUIDE.md  experiment-init.sql  requirements.txt
services/common/python/: README.md  pyproject.toml  run_unit_test
services/common/python/c_exts/: pyproject.toml  setup.py
services/common/python/tests/: gmail-crt-chain.pem  mail.py  rpc.py
services/common/rust/: Cargo.toml  README.md
services/common/rust/src/: auth.rs  config.rs  constant.rs  error.rs  lib.rs  logging.rs
services/common/rust/tests/: confidentiality.rs  config.rs  (+3 more)
services/media/: CMakeLists.txt  README.md  TODO.md  liquibase.properties  py_venv_requirement.txt  render_template.py  renew_certs.py  task_loader.py
services/media/doc/: apidoc.yaml  build-helper-doc
services/media/include/: acl.h  app_cfg.h  app_server.h  auth.h  base64.h  cfg_parser.h  datatypes.h  middleware.h  multipart_parser.h  network.h  routes.h  timer_poll.h  utils.h
services/media/infra/: Dockerfile  apps.dockerfile  cdn_setup  container-sample.env  docker-compose-dev.yml  docker-compose-generic.yml  docker-compose-itest.yml  docker-compose-utest.yml  helpertool.dockerfile  render_template.py  renew_certs.py  run_app_server_primary  run_app_server_replica  run_integration_test  task_loader.py
services/media/migration/: changelog_media.xml  deinit_db.sql  init_db.sql
services/media/settings/: dev-replica-1.json  development.json  test.json
services/media/src/: acl.c  app_cfg.c  base64.c  cfg_parser.c  routes.c  timer_poll.c  utils.c
services/order/: Cargo.toml  README.md  alembic.ini  liquibase.properties  models.py  settings.py
services/order/.cargo/: config.toml
services/order/infra/: Dockerfile  docker-compose-dev.yml  docker-compose-generic.yml  docker-compose-smoketest4dev.yml  docker-compose-test.yml  docker-compose-test3pty.yml  docker-compose-testrpc.yml  run_integration_test  smoketest-sample.env
services/order/migration/: changelog-root.xml  changelog_order-v0.2.xml  changelog_order.xml  changelog_usermgt.xml  deinit_db.sql  init_db.sql
services/order/settings/: development.json  test-in-mem.json  test-inmem-only.json  test-sql-db.json  test.json
services/order/src/: auth.rs  config.rs  constant.rs  error.rs  lib.rs  logging.rs  network.rs
services/order/tests/: gen_jwt_smoketest.py  smoke_test.py
services/payment/: .vimspector.json  Cargo.toml  README.md  liquibase.properties
services/payment/migrations/: changelog_payment.xml  changelog_payment_replica.xml  changelog_primary-root.xml  changelog_primary-v0.1.xml  changelog_replica.xml  changelog_usermgt.xml  db_deinit.sql  db_init.sql  db_trigger_replica.sql
services/payment/settings/: development.json  test.json
services/payment/src/: lib.rs  network.rs
services/product/v1.0.1/: README.md  pyproject.toml  run_integration_test  run_unit_test
services/product/v2/: README.md  pyproject.toml  run_integration_test  run_test  run_unit_test
services/store/: Pipfile  README.md  alembic_app.ini  command.py  entry.py  models.py  pyproject.toml  run_test
services/store/infra/: Dockerfile  container-sample.env  docker-compose-db-dev.yml  docker-compose-db-generic.yml  docker-compose-db-test.yml  docker-compose-dev.yml  docker-compose-generic.yml  docker-compose-migration-codegen-dev.yml  docker-compose-migration-codegen-generic.yml  docker-compose-migration-codegen-test.yml  docker-compose-smoketest4dev.yml  docker-compose-srv-dev.yml  docker-compose-srv-generic.yml  docker-compose-srv-test.yml  docker-compose-test.yml  interpolation-sample.env  run_db_upgrade  run_itest  smoketest-sample.env
services/store/migrations/: db_deinit.sql  db_init.sql
services/store/settings/: celeryconfig.py  common.py  development.py  log-cfg-dev.json  migration.py  test.py
services/store/src/: api.py  db.py  dto.py  entry.py  models.py  shared.py  validation.py
services/store/tests/: business_hours.py  common.py  conftest.py  gen_jwt_smoketest.py  products.py  smoke_test.py  staff.py
services/user_management/: Pipfile  README.md  async_tasks.py  backends.py  devtools.py  permissions.py  pyproject.toml  run_integration_test  run_unit_test  setup.py
services/user_management/data/: app_init_fixtures.json  dsl_action_history_template.json  remoteapps_quota_perm_fixtures.json
services/user_management/infra/: Dockerfile  api_server_dev  check_db_ready  container-sample.env  db_init_data_migration  db_schema_migration  docker-compose-dev.yml  docker-compose-generic.yml  docker-compose-test.yml  run_rpc_consumer  run_test_container  sample.env
services/user_management/models/: base.py
services/user_management/settings/: common.py  development.py  migration.py  production.py  test.py
services/user_management/src/: apps.py  async_tasks.py  backends.py  celeryconfig.py  init_users.py  permissions.py  setup.py  urls.py  util.py
services/user_management/tests/: async_tasks.py  common.py  login.py  smoke_test.py  standalone_env_setup.py  util.py
services/user_management/views/: base.py  constants.py
staff_portal/media/: CMakeLists.txt  README.md  TODO.md  liquibase.properties  py_venv_requirement.txt  renew_certs.py  setup_test_env.py  task_loader.py
staff_portal/media/cmake/: FindCgreen.cmake  FindCmagic.cmake
staff_portal/media/include/: acl.h  app.h  app_cfg.h  auth.h  base64.h  cfg_parser.h  datatypes.h  middleware.h  network.h  routes.h  timer_poll.h  utils.h  views.h
staff_portal/media/migration/: changelog_media.xml  changelog_usermgt.xml
staff_portal/media/settings/: dev-cdn.json  dev-replica-1.json  development.json  test.json
staff_portal/media/src/: acl.c  app.c  app_cfg.c  app_server.c  auth.c  base64.c  cfg_parser.c  main.c  middleware.c  multipart_parser.c  routes.c  timer_poll.c  utils.c  views.c
staff_portal/order/: .vimspector.json  Cargo.toml  README.md  models.py  settings.py  setup.py
staff_portal/order/settings/: development.json  test.json
staff_portal/order/src/: config.rs  constant.rs  error.rs  lib.rs  logging.rs  network.rs
(+1551 files in other folders)
